--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <article>
 
         <h2>COURSES</h2>
-        <p>What we offer</p>
+        <p class="secaoCursos__subtitulo">What we offer</p>
 
         <!-- LISTA DE CURSOS -->
         <ul>
@@ -160,7 +160,8 @@
       </article>
 
     </section>
-
+    
+    <!-- SEÇÃO CALENDARIO -->
     <section class="secaoCalendar">
 
       <h2>SCHEDULE</h2>
@@ -203,6 +204,7 @@
 
     </section>
 
+    <!-- SEÇÃO CONTATO -->
     <section class="secaoContato">
       <h2>Contact</h2>
       <div class="flex">
