--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
       </figure>
 
       <!-- MENU DE NAVEGAÇÃO -->
-      <nav>
+      <figure class="menuBars">
+        <img src="assets/img/icons8-menu-100.png" alt="Menu Bars">
+      </figure>
+      <nav class="topMenu">
         <ul>
-          <li><a href="#1">Sobre a Kenzie</a></li>
-          <li><a href="#2">Agenda</a></li>
-          <li><a href="#3">Contato</a></li>
+            <li><a href="#1">Sobre a Kenzie</a></li>
+            <li><a href="#2">Agenda</a></li>
+            <li><a href="#3">Contato</a></li>
         </ul>
       </nav>
     </div>
