--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <article class="flex">
         
         <!-- COLUNA ESQUERDA -->
-        <div class="flex-col">
+        <div class="flex-col flex-col-1">
 
           <h2>LOREM IPSUM DOLOR SIT PYTHON</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit deleniti incidunt nam quibusdam fugit reprehenderit aperiam temporibus, maiores dolores molestias cupiditate maxime repudiandae sunt voluptatibus commodi tenetur dolorum ipsa sequi.
@@ -69,7 +69,7 @@
         </div>
 
         <!-- COLUNA DIREITA -->
-        <div class="flex-col">
+        <div class="flex-col flex-col-2">
 
           <figure>
             <img src="assets/img/python.png" alt="python">
@@ -79,7 +79,7 @@
         </div>
 
         <!-- COLUNA ESQUERDA -->
-        <div class="flex-col">
+        <div class="flex-col flex-col-3">
 
             <figure>
               <img src="assets/img/JavaScript-logo.png" alt="Java Script">
@@ -89,7 +89,7 @@
           </div>
 
         <!-- COLUNA DIREITA -->
-        <div class="flex-col">
+        <div class="flex-col flex-col-4">
 
             <h2> LOREM IPSUM DOLOR SIT JAVASCRIPT</h2>
             <ul>
@@ -160,7 +160,7 @@
       </article>
 
     </section>
-    
+
     <!-- SEÇÃO CALENDARIO -->
     <section class="secaoCalendar">
 
