--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 <body>
   
   <!-- CABEÇALHO -->
+  <div class="topBackground">
   <header class="topo">
 
     <div class="large-container">
+      <div class="sub-container">
       <!-- LOGO -->
       <figure class="logo">
         <img src="assets/img/logo.svg" alt="Logo Kenzie Academy">
@@ -32,6 +34,7 @@
             <li><a href="#3">Contato</a></li>
         </ul>
       </nav>
+      </div>
     </div>
 
   </header>
@@ -42,7 +45,7 @@
     <!-- ÁREA DE DESTAQUE -->
     <section class="secaoDestaque">
 
-      <h2 class="destaque1">Lorem ipsum dolor sit Python</h2>
+      <div class="titulo"> <h2>Lorem ipsum <span>dolor sit Python</span></h2> </div>
       <p>100% Online</p>
 
       <!-- FORMULÁRIO -->
@@ -50,7 +53,7 @@
         <input type="email"  placeholder="E-mail" required>
         <button type="button">Subscribe</button>
       </div>
-
+  </div>
     </section>
 
     <!-- SEÇÃO SOBRE -->
